# report_word_count_in_webserial

./: .gitignore  LICENSE  Plain_README.md  README.md  pyproject.toml
Outputs/: search-report.md  search-report.txt
src/: init_files.py  main.py  printers.py
